@@ -38,13 +38,14 @@ import com.fincity.saas.commons.util.LogUtil;
 import com.fincity.saas.commons.util.StringUtil;
 import com.fincity.security.dao.AppRegistrationIntegrationTokenDao;
 import com.fincity.security.dto.Client;
-import com.fincity.security.dto.ClientPasswordPolicy;
-import com.fincity.security.dto.SoxLog;
 import com.fincity.security.dto.TokenObject;
 import com.fincity.security.dto.User;
+import com.fincity.security.dto.policy.AbstractPolicy;
+import com.fincity.security.enums.otp.OtpPurpose;
 import com.fincity.security.jooq.enums.SecuritySoxLogActionName;
 import com.fincity.security.jooq.enums.SecuritySoxLogObjectName;
 import com.fincity.security.model.AuthenticationIdentifierType;
+import com.fincity.security.model.AuthenticationPasswordType;
 import com.fincity.security.model.AuthenticationRequest;
 import com.fincity.security.model.AuthenticationResponse;
 import com.fincity.security.service.appregistration.AppRegistrationIntegrationTokenService;
@@ -56,11 +57,19 @@ import reactor.util.function.Tuple2;
 @Service
 public class AuthenticationService implements IAuthenticationService {
 
+	private static final String AC = "appCode";
+
+	private static final String CC = "clientCode";
+
+	private static final String SYSTEM_CC = "SYSTEM";
+
 	private final UserService userService;
 
 	private final ClientService clientService;
 
 	private final TokenService tokenService;
+
+	private final OtpService otpService;
 
 	private final SecurityMessageResourceService resourceService;
 
@@ -75,12 +84,14 @@ public class AuthenticationService implements IAuthenticationService {
 	private final AppRegistrationIntegrationTokenService appRegistrationIntegrationTokenService;
 
 	public AuthenticationService(UserService userService, ClientService clientService, TokenService tokenService,
-			SecurityMessageResourceService resourceService, SoxLogService soxLogService, PasswordEncoder pwdEncoder,
-			CacheService cacheService, AppRegistrationIntegrationTokenDao integrationTokenDao,
+			OtpService otpService, SecurityMessageResourceService resourceService, SoxLogService soxLogService,
+			PasswordEncoder pwdEncoder, CacheService cacheService,
+			AppRegistrationIntegrationTokenDao integrationTokenDao,
 			AppRegistrationIntegrationTokenService appRegistrationIntegrationTokenService) {
 		this.userService = userService;
 		this.clientService = clientService;
 		this.tokenService = tokenService;
+		this.otpService = otpService;
 		this.resourceService = resourceService;
 		this.soxLogService = soxLogService;
 		this.pwdEncoder = pwdEncoder;
@@ -133,122 +144,225 @@ public class AuthenticationService implements IAuthenticationService {
 				.readAllFilter(new FilterCondition().setField("partToken").setOperator(FilterConditionOperator.EQUALS)
 						.setValue(toPartToken(finToken)))
 				.filter(e -> e.getToken().equals(finToken)).map(TokenObject::getId).collectList()
-				.flatMap(e -> e.isEmpty() ? Mono.empty() : Mono.just(e.get(0))).flatMap(tokenService::delete)
+				.flatMap(e -> e.isEmpty() ? Mono.empty() : Mono.just(e.getFirst())).flatMap(tokenService::delete)
 				.defaultIfEmpty(1);
 	}
 
 	public Mono<AuthenticationResponse> authenticate(AuthenticationRequest authRequest, ServerHttpRequest request,
 			ServerHttpResponse response) {
 
-		String appCode = request.getHeaders().getFirst("appCode");
+		String appCode = request.getHeaders().getFirst(AC);
 
-		String clientCode = request.getHeaders().getFirst("clientCode");
+		String clientCode = request.getHeaders().getFirst(CC);
 
-		if (authRequest.getIdentifierType() == null) {
+		if (authRequest.getIdentifierType() == null)
 			authRequest.setIdentifierType(
 					StringUtil.safeIsBlank(authRequest.getUserName()) || authRequest.getUserName().indexOf('@') == -1
 							? AuthenticationIdentifierType.USER_NAME
 							: AuthenticationIdentifierType.EMAIL_ID);
-		}
+
+		AuthenticationPasswordType passwordType = authRequest.getPasswordType();
 
 		return FlatMapUtil.flatMapMono(
 
-				() -> this.userService.findUserNClient(authRequest.getUserName(), authRequest.getUserId(), clientCode,
-						appCode,
-						authRequest.getIdentifierType(), true),
-				tup -> {
-					String linClientCode = tup.getT1().getCode();
-					return Mono.justOrEmpty(linClientCode.equals("SYSTEM") || clientCode.equals(linClientCode)
-							|| tup.getT1().getId().equals(tup.getT2().getId()) ? true : null);
-				},
+				() -> this.userService.findNonDeletedUserNClient(authRequest.getUserName(), authRequest.getUserId(),
+						clientCode,
+						appCode, authRequest.getIdentifierType()),
 
-				(tup, linCCheck) -> this.checkPassword(authRequest.getPassword(), tup.getT3()),
+				tup -> Mono.justOrEmpty(
+						tup.getT1().getCode().equals(SYSTEM_CC) ||
+								clientCode.equals(tup.getT1().getCode()) ||
+								tup.getT1().getId().equals(tup.getT2().getId()) ? true : null),
 
-				(tup, linCCheck, passwordChecked) -> this.clientService.getClientPasswordPolicy(tup.getT2().getId())
-						.flatMap(policy -> this.checkFailedAttempts(tup.getT3(), policy)).defaultIfEmpty(1),
+				(tup, linCCheck) -> this.checkUserStatus(tup.getT3()),
 
-				(tup, linCCheck, passwordChecked, j) -> {
+				(tup, linCCheck, user) -> this.clientService.getClientAppPolicy(tup.getT2().getId(), appCode,
+						passwordType),
 
-					User user = tup.getT3();
+				(tup, linCCheck, user, policy) -> this.checkPassword(authRequest.getInputPassword(), appCode, user,
+						policy, passwordType),
 
-					userService.resetFailedAttempt(user.getId()).subscribe();
+				(tup, linCCheck, user, policy, passwordChecked) -> this.resetUserAttempts(user, passwordType),
 
-					soxLogService
-							.create(new SoxLog().setObjectId(user.getId()).setActionName(SecuritySoxLogActionName.LOGIN)
-									.setObjectName(SecuritySoxLogObjectName.USER).setDescription("Successful"))
-							.subscribe();
-
-					InetSocketAddress inetAddress = request.getRemoteAddress();
-					final String hostAddress = inetAddress == null ? null : inetAddress.getHostString();
-
-					return makeToken(authRequest, request, response, hostAddress, user, tup.getT2(), tup.getT1());
-				}).contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.authenticate"))
-				.switchIfEmpty(Mono.defer(this::credentialError));
+				(tup, linCCheck, user, policy, passwordChecked, attemptsReset) -> logAndMakeToken(authRequest,
+						request, response, user, tup.getT2(), tup.getT1()))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.authenticate"))
+				.switchIfEmpty(this.authError(SecurityMessageResourceService.USER_CREDENTIALS_MISMATCHED)).log();
 	}
 
 	public Mono<AuthenticationResponse> authenticateWSocial(AuthenticationRequest authRequest,
-			ServerHttpRequest request,
-			ServerHttpResponse response) {
+			ServerHttpRequest request, ServerHttpResponse response) {
 
-		if (authRequest.getSocialRegisterState() == null) {
+		if (StringUtil.safeIsBlank(authRequest.getSocialRegisterState()))
 			return this.resourceService.throwMessage(
 					msg -> new GenericException(HttpStatus.BAD_REQUEST, msg),
 					SecurityMessageResourceService.SOCIAL_LOGIN_FAILED);
-		}
 
-		String appCode = request.getHeaders().getFirst("appCode");
+		String appCode = request.getHeaders().getFirst(AC);
 
-		String clientCode = request.getHeaders().getFirst("clientCode");
+		String clientCode = request.getHeaders().getFirst(CC);
 
-		if (authRequest.getIdentifierType() == null) {
+		if (authRequest.getIdentifierType() == null)
 			authRequest.setIdentifierType(AuthenticationIdentifierType.EMAIL_ID);
-		}
 
 		return FlatMapUtil.flatMapMono(
 
-				() -> this.appRegistrationIntegrationTokenService
+				() -> this.userService.findNonDeletedUserNClient(authRequest.getUserName(),
+						authRequest.getUserId(), clientCode, appCode, authRequest.getIdentifierType()),
+
+				tup -> Mono.justOrEmpty(
+						tup.getT1().getCode().equals(SYSTEM_CC) ||
+								clientCode.equals(tup.getT1().getCode()) ||
+								tup.getT1().getId().equals(tup.getT2().getId()) ? true : null),
+
+				(tup, linCCheck) -> this.checkUserStatus(tup.getT3()),
+
+				(tup, linCCheck, user) -> this.appRegistrationIntegrationTokenService
 						.verifyIntegrationState(authRequest.getSocialRegisterState()),
 
-				appRegIntgToken -> Mono.just(appRegIntgToken.getUsername().equals(authRequest.getUserName()))
+				(tup, linCCheck, user, appRegIntgToken) -> Mono
+						.just(appRegIntgToken.getUsername().equals(authRequest.getUserName()))
 						.flatMap(BooleanUtil::safeValueOfWithEmpty),
 
-				(appRegIntgToken, usernameChecked) -> this.userService.findUserNClient(authRequest.getUserName(),
-						authRequest.getUserId(), clientCode,
-						appCode, authRequest.getIdentifierType(), true),
-
-				(appRegIntgToken, usernameChecked, tup) -> {
-					String linClientCode = tup.getT1().getCode();
-					return Mono.justOrEmpty(linClientCode.equals("SYSTEM") || clientCode.equals(linClientCode)
-							|| tup.getT1().getId().equals(tup.getT2().getId()) ? true : null);
-				},
-
-				(appRegIntgToken, usernameChecked, tup, linCCheck) -> {
-
-					User user = tup.getT3();
+				(tup, linCCheck, user, appRegIntgToken, usernameChecked) -> {
 
 					appRegIntgToken.setCreatedBy(user.getId());
 					appRegIntgToken.setUpdatedBy(user.getId());
 
-					this.integrationTokenDao.update(appRegIntgToken);
+					return this.integrationTokenDao.update(appRegIntgToken);
+				},
+				(tup, linCCheck, user, appRegIntgToken, usernameChecked, updatedToken) -> logAndMakeToken(authRequest,
+						request, response, user, tup.getT2(), tup.getT1()))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.authenticateWSocial"))
+				.switchIfEmpty(this.authError(SecurityMessageResourceService.USER_CREDENTIALS_MISMATCHED)).log();
+	}
 
-					soxLogService
-							.create(new SoxLog().setObjectId(user.getId()).setActionName(SecuritySoxLogActionName.LOGIN)
-									.setObjectName(SecuritySoxLogObjectName.USER).setDescription("Successful"))
-							.subscribe();
+	private Mono<User> checkUserStatus(User user) {
 
-					InetSocketAddress inetAddress = request.getRemoteAddress();
-					final String hostAddress = inetAddress == null ? null : inetAddress.getHostString();
+		return switch (user.getStatusCode()) {
+			case ACTIVE -> Mono.just(user);
+			case LOCKED -> this.checkUserLockStatus(user);
+			case PASSWORD_EXPIRED ->
+				this.authError(SecurityMessageResourceService.USER_ACCOUNT_PASS_EXPIRED, user.getLockedDueTo());
+			default -> this.authError(SecurityMessageResourceService.USER_ACCOUNT_BLOCKED);
+		};
+	}
 
-					return makeToken(authRequest, request, response, hostAddress, user, tup.getT2(), tup.getT1());
+	private Mono<User> checkUserLockStatus(User user) {
 
-				}).contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.authenticateWSocial"))
-				.switchIfEmpty(Mono.defer(this::credentialError)).log();
+		if (user.getLockedUntil().isBefore(LocalDateTime.now())) {
+			return this.userService.unlockUserInternal(user.getId())
+					.flatMap(unblocked -> Boolean.TRUE.equals(unblocked) ? Mono.just(user)
+							: this.authError(SecurityMessageResourceService.USER_ACCOUNT_BLOCKED));
+		}
+
+		return this.authError(SecurityMessageResourceService.USER_ACCOUNT_BLOCKED_LIMIT, user.getLockedDueTo(),
+				user.getLockedUntil() == null ? 5
+						: user.getLockedUntil().minusMinutes(LocalDateTime.now().getMinute()).getMinute());
+	}
+
+	private <T extends AbstractPolicy> Mono<Boolean> checkPassword(String passwordString, String appCode,
+			User user, T policy, AuthenticationPasswordType passwordType) {
+
+		return FlatMapUtil.flatMapMono(
+
+				() -> switch (passwordType) {
+					case PASSWORD -> user.isPasswordHashed()
+							? Mono.just(
+									pwdEncoder.matches(user.getId() + passwordString, user.getPassword()))
+							: Mono.just(StringUtil.safeEquals(passwordString, user.getPassword()));
+					case PIN -> user.isPinHashed()
+							? Mono.just(
+									pwdEncoder.matches(user.getId() + passwordString, user.getPin()))
+							: Mono.just(StringUtil.safeEquals(passwordString, user.getPin()));
+					case OTP -> otpService.verifyOtp(appCode, user, OtpPurpose.LOGIN.name(), passwordString);
+				},
+				isValid -> Boolean.FALSE.equals(isValid) ? checkFailedAttempts(user, policy, passwordType)
+						: Mono.just(Boolean.TRUE))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.checkPassword"));
+	}
+
+	private <T extends AbstractPolicy> Mono<Boolean> checkFailedAttempts(User user, T policy,
+			AuthenticationPasswordType passwordType) {
+
+		if (policy.getNoFailedAttempts() != null && compareFailedAttempts(user, policy, passwordType) >= 0) {
+
+			soxLogService.createLog(user.getId(), SecuritySoxLogActionName.LOGIN, SecuritySoxLogObjectName.USER,
+					"Failed password attempts are more than the configuration");
+
+			return FlatMapUtil.flatMapMono(
+					() -> this.lockUser(user, LocalDateTime.now().plusMinutes(policy.getUserLockTimeMin().longValue()),
+							passwordType.getName()),
+					userLocked -> this.authError(SecurityMessageResourceService.USER_ACCOUNT_BLOCKED));
+		}
+		return handleAuthFailure(user, policy, passwordType);
+	}
+
+	private <T extends AbstractPolicy> int compareFailedAttempts(User user, T policy,
+			AuthenticationPasswordType passwordType) {
+
+		return switch (passwordType) {
+			case PASSWORD -> user.getNoFailedAttempt().compareTo(policy.getNoFailedAttempts().shortValue());
+			case PIN -> user.getNoPinFailedAttempt().compareTo(policy.getNoFailedAttempts().shortValue());
+			case OTP -> user.getNoOtpFailedAttempt().compareTo(policy.getNoFailedAttempts().shortValue());
+		};
+	}
+
+	private Mono<Boolean> lockUser(User user, LocalDateTime lockUntil, String lockedDueTo) {
+		return userService.lockUserInternal(user.getId(), lockUntil, lockedDueTo)
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.lockUser"));
+	}
+
+	private <T extends AbstractPolicy> Mono<Boolean> handleAuthFailure(User user, T policy,
+			AuthenticationPasswordType passwordType) {
+
+		return userService.increaseFailedAttempt(user.getId(), passwordType)
+				.flatMap(increasedAttempts -> {
+
+					int remainingAttempts = Math.max(policy.getNoFailedAttempts().intValue() - increasedAttempts, 0);
+
+					soxLogService.createLog(user.getId(), SecuritySoxLogActionName.UPDATE,
+							SecuritySoxLogObjectName.USER,
+							"Given Password is mismatching with existing.");
+
+					return this.authError(SecurityMessageResourceService.USER_PASSWORD_INVALID, passwordType.getName(),
+							remainingAttempts);
+				});
+	}
+
+	private <T> Mono<T> authError(String message, Object... params) {
+		return resourceService.getMessage(message, params)
+				.handle((msg, sink) -> sink.error(new GenericException(HttpStatus.FORBIDDEN, msg)));
+	}
+
+	private Mono<Boolean> resetUserAttempts(User user, AuthenticationPasswordType passwordType) {
+
+		if (passwordType.equals(AuthenticationPasswordType.OTP)) {
+			return userService.resetFailedAttempt(user.getId(), passwordType)
+					.flatMap(reset -> userService.resetResendAttempt(user.getId()))
+					.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.resetUserAttempts"));
+		}
+
+		return userService.resetFailedAttempt(user.getId(), passwordType)
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.resetUserAttempts"));
+	}
+
+	private Mono<AuthenticationResponse> logAndMakeToken(AuthenticationRequest authRequest, ServerHttpRequest request,
+			ServerHttpResponse response, User user, Client client, Client linClient) {
+
+		soxLogService.createLog(user.getId(), SecuritySoxLogActionName.LOGIN, SecuritySoxLogObjectName.USER,
+				"Successful");
+
+		InetSocketAddress inetAddress = request.getRemoteAddress();
+
+		return makeToken(authRequest, request, response, inetAddress == null ? null : inetAddress.getHostString(), user,
+				client, linClient);
 	}
 
 	private Mono<AuthenticationResponse> makeToken(AuthenticationRequest authRequest, ServerHttpRequest request,
-			ServerHttpResponse response, final String setAddress, User u, Client c, Client linClient) {
+			ServerHttpResponse response, final String setAddress, User user, Client client, Client linClient) {
 
-		int timeInMinutes = authRequest.isRememberMe() ? remembermeExpiryInMinutes : c.getTokenValidityMinutes();
+		int timeInMinutes = authRequest.isRememberMe() ? remembermeExpiryInMinutes : client.getTokenValidityMinutes();
 		if (timeInMinutes <= 0)
 			timeInMinutes = this.defaultExpiryInMinutes;
 
@@ -257,18 +371,17 @@ public class AuthenticationService implements IAuthenticationService {
 
 		List<String> forwardedHost = request.getHeaders().get("X-Forwarded-Host");
 
-		if (forwardedHost != null && !forwardedHost.isEmpty()) {
-			host = forwardedHost.get(0);
-		}
+		if (forwardedHost != null && !forwardedHost.isEmpty())
+			host = forwardedHost.getFirst();
 
 		List<String> forwardedPort = request.getHeaders().get("X-Forwarded-Port");
 
-		if (forwardedPort != null && !forwardedPort.isEmpty()) {
-			port = forwardedPort.get(0);
-		}
+		if (forwardedPort != null && !forwardedPort.isEmpty())
+			port = forwardedPort.getFirst();
 
 		Tuple2<String, LocalDateTime> token = JWTUtil.generateToken(JWTGenerateTokenParameters.builder()
-				.userId(u.getId().toBigInteger()).secretKey(tokenKey).expiryInMin(timeInMinutes).host(host).port(port)
+				.userId(user.getId().toBigInteger()).secretKey(tokenKey).expiryInMin(timeInMinutes).host(host)
+				.port(port)
 				.loggedInClientId(linClient.getId().toBigInteger()).loggedInClientCode(linClient.getCode()).build());
 
 		if (authRequest.isCookie())
@@ -276,68 +389,30 @@ public class AuthenticationService implements IAuthenticationService {
 					.maxAge(Duration.ofMinutes(timeInMinutes)).build());
 
 		return tokenService
-				.create(new TokenObject().setUserId(u.getId()).setToken(token.getT1())
+				.create(new TokenObject().setUserId(user.getId()).setToken(token.getT1())
 						.setPartToken(
 								token.getT1().length() < 50 ? token.getT1()
 										: token.getT1().substring(token.getT1().length() - 50))
 						.setExpiresAt(token.getT2()).setIpAddress(setAddress))
-				.map(t -> new AuthenticationResponse().setUser(u.toContextUser()).setClient(c)
+				.map(t -> new AuthenticationResponse().setUser(user.toContextUser()).setClient(client)
 						.setLoggedInClientCode(linClient.getCode())
 						.setLoggedInClientId(linClient.getId().toBigInteger())
-						.setAccessToken(token.getT1()).setAccessTokenExpiryAt(token.getT2()));
-	}
-
-	private Mono<Integer> checkFailedAttempts(User u, ClientPasswordPolicy pol) {
-
-		if (pol.getNoFailedAttempts() != null && pol.getNoFailedAttempts().shortValue() <= u.getNoFailedAttempt()) {
-
-			soxLogService.create(new SoxLog().setObjectId(u.getId()).setActionName(SecuritySoxLogActionName.LOGIN)
-					.setObjectName(SecuritySoxLogObjectName.USER)
-					.setDescription("Failed password attempts are more than the configuration")).subscribe();
-
-			return this.credentialError().map(e -> 1);
-		}
-
-		return Mono.just(1);
-	}
-
-	private Mono<Boolean> checkPassword(String password, User u) {
-
-		if (u.isPasswordHashed()) {
-			if (pwdEncoder.matches(u.getId() + password, u.getPassword()))
-				return Mono.just(true);
-		} else if (StringUtil.safeEquals(password, u.getPassword()))
-			return Mono.just(true);
-
-		userService.increaseFailedAttempt(u.getId()).subscribe();
-
-		soxLogService.createLog(u.getId(), SecuritySoxLogActionName.UPDATE, SecuritySoxLogObjectName.USER,
-				"Given Password is mismatching with existing.");
-
-		return this.credentialError().map(e -> false);
-	}
-
-	private Mono<? extends AuthenticationResponse> credentialError() {
-
-		return resourceService.getMessage(SecurityMessageResourceService.USER_CREDENTIALS_MISMATCHED).map(msg -> {
-			throw new GenericException(HttpStatus.FORBIDDEN, msg);
-		});
-
+						.setAccessToken(token.getT1()).setAccessTokenExpiryAt(token.getT2()))
+				.contextWrite(Context.of(LogUtil.METHOD_NAME, "AuthenticationService.makeToken"));
 	}
 
 	@Override
-	public Mono<Authentication> getAuthentication(boolean basic, String bearerToken, String clientcode, String appCode,
+	public Mono<Authentication> getAuthentication(boolean basic, String bearerToken, String clientCode, String appCode,
 			ServerHttpRequest request) {
 
-		if (StringUtil.safeIsBlank(bearerToken)) {
+		if (StringUtil.safeIsBlank(bearerToken))
 			return this.makeAnonySpringAuthentication(request);
-		}
 
 		return FlatMapUtil.flatMapMonoWithNull(
 
 				() -> cacheService.get(CACHE_NAME_TOKEN, bearerToken).map(ContextAuthentication.class::cast),
 
-				cachedCA -> basic ? Mono.empty() : checkTokenOrigin(request, this.extractClamis(bearerToken)),
+				cachedCA -> basic ? Mono.empty() : checkTokenOrigin(request, this.extractClaims(bearerToken)),
 
 				(cachedCA, claims) -> {
 
@@ -355,7 +430,7 @@ public class AuthenticationService implements IAuthenticationService {
 
 		if (!basic) {
 
-			final var claims = extractClamis(bearerToken);
+			final var claims = extractClaims(bearerToken);
 
 			return FlatMapUtil.flatMapMono(
 
@@ -394,28 +469,31 @@ public class AuthenticationService implements IAuthenticationService {
 			String username = token.substring(0, token.indexOf(':'));
 			String password = token.substring(token.indexOf(':') + 1);
 
-			String appCode = request.getHeaders().getFirst("appCode");
-			String clientCode = request.getHeaders().getFirst("clientCode");
+			String appCode = request.getHeaders().getFirst(AC);
+			String clientCode = request.getHeaders().getFirst(CC);
 
 			return FlatMapUtil.flatMapMono(
 
-					() -> this.userService.findUserNClient(username, null, clientCode, appCode,
-							AuthenticationIdentifierType.USER_NAME, true),
+					() -> this.userService.findNonDeletedUserNClient(username, null, clientCode, appCode,
+							AuthenticationIdentifierType.USER_NAME),
 
-					tup -> {
-						String linClientCode = tup.getT1().getCode();
-						return Mono.justOrEmpty(linClientCode.equals("SYSTEM") || linClientCode.equals(clientCode)
-								|| tup.getT1().getId().equals(tup.getT2().getId()) ? true : null);
-					},
+					tup -> Mono.justOrEmpty(
+							tup.getT1().getCode().equals(SYSTEM_CC) ||
+									clientCode.equals(tup.getT1().getCode()) ||
+									tup.getT1().getId().equals(tup.getT2().getId()) ? true : null),
 
-					(tup, linCCheck) -> this.checkPassword(password, tup.getT3()),
+					(tup, linCCheck) -> this.checkUserStatus(tup.getT3()),
 
-					(tup, linCCheck, passwordChecked) -> {
-						return Mono.just(new ContextAuthentication(
-								tup.getT3().toContextUser(), true, tup.getT1().getId().toBigInteger(),
-								tup.getT1().getCode(), tup.getT2().getTypeCode(), tup.getT2().getCode(), finToken,
-								LocalDateTime.now().plusYears(1), clientCode, appCode));
-					})
+					(tup, linCCheck, user) -> this.clientService.getClientAppPolicy(tup.getT2().getId(), appCode,
+							AuthenticationPasswordType.PASSWORD),
+
+					(tup, linCCheck, user, policy) -> this.checkPassword(password, null, user, policy,
+							AuthenticationPasswordType.PASSWORD),
+
+					(tup, linCCheck, user, policy, passwordChecked) -> Mono.just(new ContextAuthentication(
+							user.toContextUser(), true, tup.getT1().getId().toBigInteger(),
+							tup.getT1().getCode(), tup.getT2().getTypeCode(), tup.getT2().getCode(), finToken,
+							LocalDateTime.now().plusYears(1), clientCode, appCode)))
 					.contextWrite(Context.of(LogUtil.METHOD_NAME,
 							"AuthenticationService.getAuthenticationIfNotInCache [Basic]"))
 					.map(Authentication.class::cast)
@@ -424,17 +502,17 @@ public class AuthenticationService implements IAuthenticationService {
 		}
 	}
 
-	private JWTClaims extractClamis(String bearerToken) {
+	private JWTClaims extractClaims(String bearerToken) {
 
-		JWTClaims c = null;
+		JWTClaims claims;
 		try {
-			c = JWTUtil.getClaimsFromToken(this.tokenKey, bearerToken);
+			claims = JWTUtil.getClaimsFromToken(this.tokenKey, bearerToken);
 		} catch (Exception ex) {
 			throw new GenericException(HttpStatus.UNAUTHORIZED,
 					resourceService.getDefaultLocaleMessage(SecurityMessageResourceService.TOKEN_EXPIRED), ex);
 		}
 
-		return c;
+		return claims;
 	}
 
 	private String toPartToken(String bearerToken) {
@@ -462,24 +540,36 @@ public class AuthenticationService implements IAuthenticationService {
 
 	private Mono<Authentication> makeAnonySpringAuthentication(ServerHttpRequest request) {
 
-		List<String> clientCode = request.getHeaders().get("clientCode");
+		List<String> clientCode = request.getHeaders().get(CC);
 
 		Mono<Client> loggedInClient = ((clientCode != null && !clientCode.isEmpty())
-				? this.clientService.getClientBy(clientCode.get(0))
+				? this.clientService.getClientBy(clientCode.getFirst())
 				: this.clientService.getClientBy(request))
 				.switchIfEmpty(
 						this.resourceService.throwMessage(msg -> new GenericException(HttpStatus.UNAUTHORIZED, msg),
 								SecurityMessageResourceService.UNKNOWN_CLIENT));
 
-		return loggedInClient.map(e -> (Authentication) new ContextAuthentication(
-				new ContextUser().setId(BigInteger.ZERO).setCreatedBy(BigInteger.ZERO).setUpdatedBy(BigInteger.ZERO)
-						.setCreatedAt(LocalDateTime.now()).setUpdatedAt(LocalDateTime.now())
+		return loggedInClient.map(e -> new ContextAuthentication(
+				new ContextUser()
+						.setId(BigInteger.ZERO)
+						.setCreatedBy(BigInteger.ZERO)
+						.setUpdatedBy(BigInteger.ZERO)
+						.setCreatedAt(LocalDateTime.now())
+						.setUpdatedAt(LocalDateTime.now())
 						.setClientId(e.getId().toBigInteger())
-						.setUserName("_Anonymous").setEmailId("nothing@nothing").setPhoneNumber("+910000000000")
-						.setFirstName("Anonymous").setLastName("").setLocaleCode("en").setPassword("")
+						.setUserName("_Anonymous")
+						.setEmailId("nothing@nothing")
+						.setPhoneNumber("+910000000000")
+						.setFirstName("Anonymous")
+						.setLastName("")
+						.setLocaleCode("en")
+						.setPassword("")
 						.setPasswordHashed(false)
-						.setAccountNonExpired(true).setAccountNonLocked(true).setCredentialsNonExpired(true)
-						.setNoFailedAttempt((short) 0).setStringAuthorities(List.of("Authorities._Anonymous")),
+						.setAccountNonExpired(true)
+						.setAccountNonLocked(true)
+						.setCredentialsNonExpired(true)
+						.setNoFailedAttempt((short) 0)
+						.setStringAuthorities(List.of("Authorities._Anonymous")),
 				false, e.getId().toBigInteger(), e.getCode(), e.getTypeCode(), e.getCode(), "", LocalDateTime.MAX, null,
 				null));
 	}
@@ -491,11 +581,10 @@ public class AuthenticationService implements IAuthenticationService {
 		List<String> forwardedHost = request.getHeaders().get("X-Forwarded-Host");
 
 		if (forwardedHost != null && !forwardedHost.isEmpty()) {
-			host = forwardedHost.get(0);
+			host = forwardedHost.getFirst();
 		}
 
 		if (!host.equals(jwtClaims.getHostName())) {
-
 			return resourceService.throwMessage(msg -> new GenericException(HttpStatus.UNAUTHORIZED, msg),
 					SecurityMessageResourceService.UNKNOWN_TOKEN);
 		}
@@ -511,9 +600,8 @@ public class AuthenticationService implements IAuthenticationService {
 
 				ca -> {
 
-					if (!ca.isAuthenticated()) {
+					if (!ca.isAuthenticated())
 						return Mono.error(new GenericException(HttpStatus.UNAUTHORIZED, "Unauthorized"));
-					}
 
 					return this.clientService.getClientInfoById(ca.getUser().getClientId());
 				},
@@ -531,7 +619,7 @@ public class AuthenticationService implements IAuthenticationService {
 
 				(ca, client, revoked) -> {
 
-					if (revoked.booleanValue())
+					if (Boolean.TRUE.equals(revoked))
 						return this.generateNewToken(ca, request, client);
 
 					return Mono.just(new AuthenticationResponse().setUser(ca.getUser()).setClient(client)
